Feed abstract: Fix scrollbars showing on some abstracts
`clip` somehow doesn't do the trick.

--- a/scss/feedAbstract.scss
+++ b/scss/feedAbstract.scss
@@ -17,7 +17,7 @@ html {
 
 html, body {
 	background: var(--material-sidepane);
-	overflow: clip;
+	overflow: hidden;
 	line-height: 1.5;
 }
 
